# Writeous

./: pyproject.toml  server.py
templates/: cat.html
writeous/: cli.py
